ops/servicemesh/virtualservice-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-vs
spec:
  hosts:
  - "github.frieza.local"
  gateways:
  - istio-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1
    route:
    - destination:
        port:
          number: 80
        host: api-gateway
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: repo-search-ui
